--- a/WebTamagotchi/appsettings.json
+++ b/WebTamagotchi/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ConnectionString": "Host=localhost;Port=5432;User Id=postgres;Password=postgres;Database=WebTamagotchi;"
+  },
+  "Jwt": {
+    "Expire": 60,
+    "Secret": "some_big_key_value_here_secret332",
+    "Issuer": "https://localhost:5001",
+    "Audience": "https://localhost:5001",
+    "TokenValidityInMinutes": "30"
   }
 }
