--- a/WebTamagotchi/appsettings.json
+++ b/WebTamagotchi/appsettings.json
@@ -9,6 +9,9 @@
   "ConnectionStrings": {
     "ConnectionString": "Host=localhost;Port=5432;User Id=postgres;Password=postgres;Database=WebTamagotchi;"
   },
+  "Cors": {
+    "Urls": ["http://localhost:5239"]
+  },
   "Jwt": {
     "Expire": 60,
     "Secret": "some_big_key_value_here_secret332",
