--- a/WebTamagotchi/appsettings.Development.json
+++ b/WebTamagotchi/appsettings.Development.json
@@ -8,14 +8,10 @@
   "ConnectionStrings": {
     "ConnectionString": "Host=localhost;Port=5432;User Id=postgres;Password=postgres;Database=WebTamagotchi;"
   },
-  "Cors": {
-    "Urls": ["http://localhost:5239"]
-  },
-  "Jwt": {
-    "Expire": 60,
-    "Secret": "some_big_key_value_here_secret332",
-    "Issuer": "https://localhost:5001",
-    "Audience": "https://localhost:5001",
-    "TokenValidityInMinutes": "30"
+  "JwtTokenSettings": {
+    "ValidIssuer": "ExampleIssuer",
+    "ValidAudience": "ValidAudience",
+    "SymmetricSecurityKey": "fvh8456477hth44j6wfds98bq9hp8bqh9ubq9gjig3qr0[94vj5",
+    "JwtRegisteredClaimNamesSub": "345h098bb8reberbwr4vvb8945"
   }
 }
