--- a/WebTamagotchi.Identity/WebTamagotchi.Identity.csproj
+++ b/WebTamagotchi.Identity/WebTamagotchi.Identity.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Asp.Versioning.Mvc" Version="8.0.0" />
+      <PackageReference Include="CSharpFunctionalExtensions" Version="2.40.3" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.2" />
