create gamelogic proj

--- a/WebTamagotchi/WebTamagotchi.csproj
+++ b/WebTamagotchi/WebTamagotchi.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\WebTamagotchi.GameLogic\WebTamagotchi.GameLogic.csproj" />
       <ProjectReference Include="..\WebTamagotchi.Identity\WebTamagotchi.Identity.csproj" />
     </ItemGroup>
 
