--- a/WebTamagotchi.Dal/WebTamagotchi.Dal.csproj
+++ b/WebTamagotchi.Dal/WebTamagotchi.Dal.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <Folder Include="Converters\" />
+      <Folder Include="Repositories\Interfaces\" />
     </ItemGroup>
 
     <ItemGroup>
