--- a/WebTamagotchi.GameLogic/WebTamagotchi.GameLogic.csproj
+++ b/WebTamagotchi.GameLogic/WebTamagotchi.GameLogic.csproj
@@ -8,4 +8,8 @@
         <RootNamespace>WebTamagotchi.GameLogic</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\WebTamagotchi.Identity\WebTamagotchi.Identity.csproj" />
+    </ItemGroup>
+
 </Project>
