--- a/WebTamagotchi/WebTamagotchi.csproj
+++ b/WebTamagotchi/WebTamagotchi.csproj
@@ -46,6 +46,7 @@
       <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.3.1" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.3.1" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+      <PackageReference Include="OpenAI" Version="1.11.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
