--- a/WebTamagotchi/appsettings.json
+++ b/WebTamagotchi/appsettings.json
@@ -14,5 +14,8 @@
     "ValidAudience": "ValidAudience",
     "SymmetricSecurityKey": "fvh8456477hth44j6wfds98bq9hp8bqh9ubq9gjig3qr0[94vj5",
     "JwtRegisteredClaimNamesSub": "345h098bb8reberbwr4vvb8945"
+  },
+  "OpenAIChatGpt": {
+    "Key": "sk-proj-VDkk8PzxQKLhttSeEEEQT3BlbkFJItB2QfKVVsCb5toLlkms"
   }
 }
